[gd_scene load_steps=7 format=2]

[ext_resource path="res://MobileRPG Resources 2/Images/Dungeon.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://StartScreen.tscn" type="PackedScene" id=6]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45, 80 )
texture = ExtResource( 1 )

[node name="Enemy" parent="." instance=ExtResource( 4 )]
position = Vector2( 46, 41 )

[node name="Player" parent="." instance=ExtResource( 5 )]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 46, 41 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="StartScreen" parent="CanvasLayer" instance=ExtResource( 6 )]
visible = false

[node name="AnimatedSprite" parent="CanvasLayer/StartScreen" index="1"]
frame = 3

[connection signal="enemy_attacks" from="Enemy" to="." method="_on_Enemy_enemy_attacks"]
[connection signal="enemy_dead" from="Enemy" to="." method="_on_Enemy_enemy_dead"]
[connection signal="hp_changed" from="Player" to="CanvasLayer/UI" method="_on_Player_hp_changed"]
[connection signal="mp_changed" from="Player" to="CanvasLayer/UI" method="_on_Player_mp_changed"]
[connection signal="player_dead" from="Player" to="." method="_on_Player_player_dead"]
[connection signal="block" from="CanvasLayer/UI" to="." method="_on_UI_block"]
[connection signal="chat" from="CanvasLayer/UI" to="." method="_on_UI_chat"]
[connection signal="magic" from="CanvasLayer/UI" to="." method="_on_UI_magic"]
[connection signal="sword" from="CanvasLayer/UI" to="." method="_on_UI_sword"]
[connection signal="pressed" from="CanvasLayer/StartScreen/Button" to="." method="_on_Button_pressed"]

[editable path="CanvasLayer/StartScreen"]
